# muse-socket-poll

./: .gitignore  CMakeLists.txt  README.md  client.cpp  server.cpp  server_v2.cpp
log/: client.log.2025-04-08_16-37-15  client.log.2025-04-08_17-06-51
socket/: client_socket.cpp  client_socket.h  poller.cpp  poller.h  server_socket.cpp  server_socket.h  socket.cpp  socket.h  socket_handler.h
utility/: logger.cpp  logger.h  singleton.h
